# camelSloth

./: .gitignore  README.md  pyproject.toml  setup.py
camelsloth/: __init__.py  config_parser.py  data_generation.py  data_preprocessing.py  main.py  sft_finetuning.py  utils.py
examples/: qa_data.json  sample_config.yaml
